--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
   <h3 class="w3-border-bottom w3-border-light-grey w3-padding-5" style=background-color:pink;font-family:Cookie;><b>Access Points</b></h3>
   </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
-      <img src="https://i.imgur.com/zb0G4eY.pn" alt="mission" style="width:100%" height=370px>
+      <img src="https://images.squarespace-cdn.com/content/v1/508da03be4b0d28844ddf21c/1542777013173-VJ3TD405DYMXXFA58Q7F/ke17ZwdGBToddI8pDm48kF9aEDQaTpZHfWEO2zppK7Z7gQa3H78H3Y0txjaiv_0fDoOvxcdMmMKkDsyUqMSsMWxHk725yiiHCCLfrh8O1z5QPOohDIaIeljMHgDF5CVlOqpeNLcJ80NK65_fV7S1UX7HUUwySjcPdRBGehEKrDf5zebfiuf9u6oCHzr2lsfYZD7bBzAwq_2wCJyqgJebgg/Jilma-Meneses.jpg" alt="mission" style="width:97%" height=370px>
       <h3>Mission Access Point</h3>
       <p class="w3-opacity">Access Point</p>
       <p>2871 Mission Street 
@@ -222,23 +222,49 @@ San Francisco, CA 94110
 <br>Friday- 8:30am-7pm
 <br>Weekends – Closed
 </p>
-      <p><button class="w3-button w3-light-grey w3-block">(415) 972-1281</button></p>
+      <p><button class="w3-button w3-light-grey w3-block"; style="width:97%">(415) 972-1281</button></p>
     </div>
     
     <div class="w3-col l3 m6 w3-margin-bottom">
-      <img src="https://media-exp1.licdn.com/dms/image/C5603AQF9FUtz8sYw4w/profile-displayphoto-shrink_200_200/0?e=1584576000&v=beta&t=jP9to0fWn0sV-EMUQp_mlivDhJHuNzSvoYiWeqdbSw" alt="bayview" style="width:100%" height=370px>
-      <h3>Gabriella Quach</h3>
-      <p class="w3-opacity">High School Junior</p>
-      <p>Gabby is a junior at Lowell High School in San Francisco, California. She discovered computer science in middle school and is taking APCS Java along with programming classes at City College of San Francisco. She has played volleyball for the past nine years, one of those on Lowell's Varsity team. She hopes to continue volunteering at various hospitals to make change in her community.  </p>
-      <p><button class="w3-button w3-light-grey w3-block">gabbyq1031@gmail.com</button></p>
+      <img src="https://i.imgur.com/Wm739bI.png" alt="bayview" style="width:97%" height=370px>
+      <h3>Bayview Access Point</h3>
+      <p class="w3-opacity">Access Point</p>
+      <p>1641 LaSalle Avenue
+San Francisco, CA 94124
+        <br>
+        <br><b>Website:</b> https://catholiccharitiessf.org/our-programs/accesspoint/
+        <br>
+        <br><b>Hours of Operation:</b>
+        <br>Monday (Extended Hours) – 8:30AM-7:00PM
+<br>Tuesday – 8:30AM-5:00PM
+<br>Wednesday – 8:30AM-5:00PM
+<br>Thursday – 8:30AM-5:00PM
+<br>Friday – 8:30AM-5:00PM
+<br>Weekends – Closed
+      </p>
+      <p><button class="w3-button w3-light-grey w3-block"; style="width:97%">415-430-6320</button></p>
     </div>
     
     <div class="w3-col l3 m6 w3-margin-bottom">
-      <img src="https://i.imgur.com/I8hPZVu.jpg" alt="Nadine" style="width:100%"height=370px>
-      <h3>Nadine Ordaz</h3>
-      <p class="w3-opacity">College Freshman</p>
-      <p>Nadine is currently a first-year college student majoring in cognitive science. She has had an interest in computer science and artificial intelligence since she first learned about it in junior high and became further fascinated with the topics when she attended a summer mathematics camp held on UC Berkeley's campus. Her dream career is to head a program at NASA and provide mentors/scholarships for women of color in STEM.</p>
-      <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
+      <img src="blob:https://imgur.com/47b83489-5d8c-4d12-9116-ec225aa767f0" alt="cc" style="width:97%"height=370px>
+      <h3>Central City Access Point</h3>
+      <p class="w3-opacity">Access Point</p>
+      <p>37 Grove Street
+San Francisco, CA 94102
+        <br>
+        <br><b>Website:</b> https://www.compass-sf.org/
+        <br>
+        <br><b>Hours of Operation:</b>
+        <br>Monday – 9:00AM – 12:00PM and 1:00PM – 5:00PM
+<br>Tuesday  9:00AM-12:00PM*
+
+<br>*Closed every third Tuesday of the month
+
+<br>Wednesday 9:00AM – 12:00PM and 1:00PM – 7:00PM
+<br>Thursday – 9:00AM – 12:00PM and 1:00PM – 5:00PM
+<br>Friday – 9:00AM – 12:00PM and 1:00PM – 5:00PM
+<br>Weekends – Closed</p>
+      <p><button class="w3-button w3-light-grey w3-block"; style= "width:97%">415-644-0504</button></p>
     </div>
   </div>
   <!-- About/Contact Section -->
