--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <title>SF Homeless Link</title>
-<link rel="stylesheet" src="w3.css">
+<link rel="stylesheet" src=w3.css>
 <body style=font-family:Cookie;background-color:white;>
 <div class="w3-top">
   <div class="w3-bar w3-white w3-wide w3-padding w3-card">
