--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ h5 {
       <h3>Compass Family Shelter</h3>
       <p class="w3-opacity">Family Shelter</p>
       <p>626 Polk Street San Francisco CA 94102</p>
-      <p><button class="w3-button w3-light-grey w3-block"; style="width:97%"><a href="tel:+14156440504">>(415)644-0504</a></button></p>
+      <p><button class="w3-button w3-light-grey w3-block"; style="width:97%"><a href="tel:+14156440504">(415)644-0504</a></button></p>
     </div>
     
      <div class="w3-col l3 m6 w3-margin-bottom">
@@ -410,12 +410,11 @@ Dinner: Mon-Fri, doors open at 4pm
 </div>
 
 
+  
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-16">
   <p>Programmed in HTML at Superposition IV in San Francisco, California</p>
 </footer>   
     
 </body>
-</html>
-</html>
 </html>
