--- a/index.html
+++ b/index.html
@@ -274,6 +274,8 @@ San Francisco, CA 94102
   <!-- Meals Section -->
   <div class="w3-container w3-padding 25">
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-5" id="meals"style=background-color:pink;font-family:Cookie; id = "meals"><b>Meals</b></h3>
+    <center><img src="https://i.imgur.com/VlFCNZU.jpg"  alt="bed" width="60%"></center>
+    <br>
   	 <div class="w3-col l3 m6 w3-margin-bottom">
       <img src="https://www.aiasf.org/resource/resmgr/Images/DesignAwards/2015/St_Anthony/2322-6.jpg" alt="st anthonys" style="width:97%"height=370px>
       <h3>St. Anthony's</h3>
